--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">MyMoviesMVVM</string>
     <string name="something_went_wrong">something_went_wrong</string>
     <string name="nothing_found">nothing found</string>
+    <string name="favorite">favorite</string>
+    <string name="add_to_favorite">add to favorite</string>
 </resources>
